# bazel-diesel-postgres

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bzlmod
alias/: BUILD.bazel
migrations/: BUILD.bazel
src/: embed_migrations.rs  lib.rs
tests/: BUILD.bazel  migration_tests.rs  mod.rs  service_tests.rs
