load("@rules_rust//rust:defs.bzl", "rust_test_suite")

rust_test_suite(
    name = "service_tests",
    srcs = glob([
        "service_tests.rs",
    ]),
    tags = [
        "service_tests",
        "integration_test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        "//:bazel-diesel-postgres",
        # External crates
        "//thirdparty/crates:diesel",
        "//thirdparty/crates:dotenvy",
    ],
)
